Fixes for hover state for arrow and alignment

--- a/playbook/app/pb_kits/playbook/pb_multi_level_select/_multi_level_select.scss
+++ b/playbook/app/pb_kits/playbook/pb_multi_level_select/_multi_level_select.scss
@@ -42,7 +42,6 @@
       content: "";
       display: inline-block;
       height: 0.8em;
-      left: 0.1em;
       position: relative;
       vertical-align: top;
       width: 0.8em;
@@ -50,21 +49,35 @@
       transform: rotate(135deg);
       font-size: 0.5em;
     }
+    .toggle.expanded:hover {
+      background-color: rgba(0, 86, 207, 0.1);
+      border-radius: $border_radius_rounded;
+      &::after {
+        color: $primary;
+      }
+    }
     .toggle.collapsed:after {
       border-style: solid;
       border-width: 0.1em 0.1em 0 0;
       content: "";
       display: inline-block;
       height: 0.8em;
-      left: 0.1em;
+      right: 0.1em;
       position: relative;
       vertical-align: top;
       width: 0.8em;
       top: 8px;
       font-size: 0.5em;
-
       transform: rotate(45deg);
       top: 10px;
+    }
+
+    .toggle.collapsed:hover {
+      background-color: rgba(0, 86, 207, 0.1);
+      border-radius: $border_radius_rounded;
+      &::after {
+        color: $primary;
+      }
     }
 
     .tag {
